force-app/main/default/objects/SBTR_Approval__c/SBTR_Approval__c.object-meta.xml
<CustomObject>
    <label>SBTR Approval</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>SBTR Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SBTR Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>