force-app/main/default/objects/SBTR_Approval__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>SBTR Approvals</relationshipLabel>
    <relationshipName>SBTR_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>