force-app/main/default/objects/SBTR_Approval__c/fields/CM_Include__c.field-meta.xml
<CustomField>
    <fullName>CM_Include__c</fullName>
    <label>CM Include</label>
    <length>30</length>
    <type>Text</type>
</CustomField>