force-app/main/default/objects/SBTR_Approval__c/fields/Declared_Date__c.field-meta.xml
<CustomField>
    <fullName>Declared_Date__c</fullName>
    <label>Declared Date</label>
    <type>Date</type>
</CustomField>