force-app/main/default/objects/SBTR_Approval__c/fields/Old_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Deal_Type__c</fullName>
    <formula>TEXT(SBTR__r.Deal_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Deal Type</label>
    <type>Text</type>
</CustomField>