force-app/main/default/objects/SBTR_Approval__c/fields/Old_Secondary_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Old_Secondary_Sales_Manager__c</fullName>
    <formula>SBTR__r.Secondary_Sales_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Secondary Sales Manager</label>
    <type>Text</type>
</CustomField>