force-app/main/default/objects/SBTR_Approval__c/fields/Old_SFDC_CPID__c.field-meta.xml
<CustomField>
    <fullName>Old_SFDC_CPID__c</fullName>
    <formula>SBTR__r.SFDC_CPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old SFDC CPID</label>
    <type>Text</type>
</CustomField>