force-app/main/default/objects/SBTR_Approval__c/fields/Old_Source_Classification_1__c.field-meta.xml
<CustomField>
    <fullName>Old_Source_Classification_1__c</fullName>
    <formula>SBTR__r.Source_Classification_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Source Classification 1</label>
    <type>Text</type>
</CustomField>