force-app/main/default/objects/SBTR_Approval__c/fields/Old_Team_Head__c.field-meta.xml
<CustomField>
    <fullName>Old_Team_Head__c</fullName>
    <formula>SBTR__r.Team_Head__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Team Head</label>
    <type>Text</type>
</CustomField>