force-app/main/default/objects/SBTR_Approval__c/fields/Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value__c</fullName>
    <label>Sale_Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>