force-app/main/default/objects/SBTR_Approval__c/fields/SBTR__c.field-meta.xml
<CustomField>
    <fullName>SBTR__c</fullName>
    <label>SBTR</label>
    <referenceTo>SBTR__c</referenceTo>
    <relationshipLabel>SBTR Approvals</relationshipLabel>
    <relationshipName>SBTR_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>