force-app/main/default/objects/SBTR_Approval__c/fields/Secondary_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SBTR_Approvals1</relationshipName>
    <type>Lookup</type>
</CustomField>