force-app/main/default/objects/SBTR_Approval__c/fields/Send_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Send_For_Approval__c</fullName>
    <label>Send For Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approver 1</fullName>
            </value>
            <value>
                <fullName>Approver 2</fullName>
            </value>
            <value>
                <fullName>Approval 3</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>