force-app/main/default/objects/SBTR_Approval__c/fields/SFDC_CPID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_CPID__c</fullName>
    <label>SFDC CPID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>