force-app/main/default/objects/SBTR_Approval__c/fields/Team_Head_2__c.field-meta.xml
<CustomField>
    <fullName>Team_Head_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Head 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SBTR_Approvals3</relationshipName>
    <type>Lookup</type>
</CustomField>