force-app/main/default/objects/SBTR_Approval__c/fields/Team_Head__c.field-meta.xml
<CustomField>
    <fullName>Team_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SBTR_Approvals2</relationshipName>
    <type>Lookup</type>
</CustomField>